--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>"facts"</title>
+  <link rel="shortcut icon" type="jpg" id="witt" href="images/Wittgenstein_forfavicon.jpg"/>
+
   <script defer src="js/app.js"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link 
@@ -20,6 +22,7 @@
 ></script>
 </head>
 <body>
+  <h1>"facts"</h1>
   
 </body>
 </html>
