variables, cars, event listeners

--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 </head>
 <body>
   <h1>"facts"</h1>
+  <section class="notecard">
+    <div id="category"></div>
+    <div id="display-fact"></div>
+    <div id="display-score"></div>
+    <div id="display-strikes"></div>
+    <div id="message"></div>
+  </section>
+  <button id="true-btn"></button>
+  <button id="false-Btn"></button>
   
 </body>
 </html>
