--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>"facts"</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="jpg" id="witt" href="images/Wittgenstein_forfavicon.jpg"/>
 
   <script defer src="js/app.js"></script>
@@ -31,7 +34,7 @@
     <div id="message"></div>
   </section>
   <button id="true-btn"></button>
-  <button id="false-Btn"></button>
+  <button id="false-btn"></button>
   
 </body>
 </html>
