init and some styling

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 <body>
   <h1>"facts"</h1>
   <section class="notecard">
-    <div id="category"></div>
+    <div id="category">category:</div>
     <div id="display-fact"></div>
-    <div id="display-score"></div>
+    <div id="display-score">score: </div>
     <div id="display-strikes"></div>
     <div id="message"></div>
   </section>
-  <button id="true-btn"></button>
-  <button id="false-btn"></button>
+  <button type="submit" id="true-btn">True</button>
+  <button type="submit" id="false-btn">False</button>
   
 </body>
 </html>
