getFacts display fact

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
     <div id="display-strikes"></div>
     <div id="message"></div>
   </section>
-  <button type="submit" id="true-btn">True</button>
-  <button type="submit" id="false-btn">False</button>
-  
+  <form class="buttons">
+    <button type="submit" id="true-btn">True</button>
+    <button type="submit" id="false-btn">False</button>
+  </form>
 </body>
 </html>
