--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
   <section class="notecard">
     <div id="category">category:</div>
     <div id="display-score">score: </div>
-    <div id="display-fact"></div>
+    <div id="trivia"></div>
     <div id="display-strikes"></div>
     <div id="message"></div>
   </section>
   <form class="buttons">
-    <button type="submit" id="true-btn">True</button>
-    <button type="submit" id="false-btn">False</button>
+    <button type="submit" id="true">True</button>
+    <button type="submit" id="false">False</button>
   </form>
 </body>
 </html>
