handleClick and secondRender added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <section class="notecard">
     <div id="category">category:</div>
     <div id="display-score">score: </div>
-    <div id="trivia"></div>
-    <div id="display-strikes"></div>
+    <div id="fact"></div>
+    <div id="display-strikes">strikes: </div>
     <div id="message"></div>
   </section>
   <form class="buttons">
