--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 </head>
 <body>
   <h1>"facts"</h1>
+  <div id="game-over">that's it</div>
   <section class="notecard">
     <div id="category">category:</div>
     <div id="display-score">score: </div>
