--- a/index.html
+++ b/index.html
@@ -9,31 +9,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="jpg" id="witt" href="images/Wittgenstein_forfavicon.jpg"/>
-
   <script defer src="js/app.js"></script>
   <link rel="stylesheet" href="./css/style.css">
-  <link 
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-  rel="stylesheet" 
-  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
-  crossorigin="anonymous">
-  <script
-  defer 
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-  crossorigin="anonymous"
-></script>
 </head>
 <body>
   <h1>"facts"</h1>
   <div id="game-over">that's it</div>
-  <section class="notecard">
+  <section class="grid-container">
     <div id="category">category:</div>
     <div id="display-score">score: </div>
     <div id="fact"></div>
     <div id="message"></div>
   </section>
-  <form class="buttons">
+  <form class="form">
     <button type="submit" id="true">True</button>
     <button type="submit" id="false">False</button>
   </form>
