--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <h1>"facts"</h1>
   <div id="game-over">that's it</div>
-  <section class="grid-container">
+  <section class="notecard">
     <div id="category">category:</div>
     <div id="display-score">score: </div>
     <div id="fact"></div>
     <div id="message"></div>
   </section>
-  <form class="form">
+  <div class="buttons">
     <button type="submit" id="true">True</button>
     <button type="submit" id="false">False</button>
   </form>
