--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
   <h1>"facts"</h1>
   <div id="game-over">that's it</div>
   <section class="notecard">
+    <p class="instructions">For each stated "fact," choose whether the fact is true or false. You have 60 seconds to answer 5 facts!<br>
+    <p class="timer"><span id="timer">60</span></p>
+    <button id="timer-btn">Go!</button>
+
+  <!-- add timer message to init -->
+  <!-- call timer for render functions -->
     <div id="category">category:</div>
     <div id="display-score">score: </div>
     <div id="fact"></div>
