game over message

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <!-- call timer for render functions -->
     <div id="category">category:</div>
     <div id="display-score">score: </div>
+    <div id="game-over">That's it bubba.</div>
     <div id="fact"></div>
     <div id="message"></div>
   </section>
